batching and streaming
